@@ -826,8 +826,8 @@ pthread::cancel ()
       posix_fallocate ()
       posix_madvise ()
       posix_openpt ()
-    o posix_spawn ()
-    o posix_spawnp ()
+      posix_spawn ()
+      posix_spawnp ()
     o posix_trace_clear ()
     o posix_trace_close ()
     o posix_trace_create ()
